k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracker-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker-api
  template:
    metadata:
      labels:
        app: tracker-api
    spec:
      containers:
        - name: tracker-api
          image: github-tracker-backend:v1.0.0
          imagePullPolicy: IfNotPresent
          command: ["node", "src/server.js"]
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: db-data
              mountPath: /data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: tracker-db-pvc
