k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracker-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker-backend
  template:
    metadata:
      labels:
        app: tracker-backend
    spec:
      containers:
        - name: tracker-backend
          image: github-tracker-backend:v1.0.0
          imagePullPolicy: IfNotPresent
          command: ["node", "src/index.js"]
          volumeMounts:
            - name: db-data
              mountPath: /data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: tracker-db-pvc
