k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracker-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tracker-frontend
  template:
    metadata:
      labels:
        app: tracker-frontend
    spec:
      containers:
        - name: tracker-frontend
          image: github-tracker-frontend:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
