k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracker-backend-service
spec:
  type: ClusterIP
  selector:
    app: tracker-api
  ports:
    - port: 80
      targetPort: 3000
