k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracker-ingress
spec:
  ingressClassName:  nginx
  rules:
    - host: tracker.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tracker-backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracker-frontend-service
                port:
                  number: 80
